src/test/ui/nll/user-annotations/pattern_substs_on_brace_enum_variant.stderr
warning: type parameter on variant
  --> $DIR/pattern_substs_on_brace_enum_variant.rs:9:18
   |
LL |    let Foo::Bar::<'static> { field: _z } = foo;
   |                  ^^^^^^^^^
   |
   = note: `#[warn(type_param_on_variant_ctor)]` on by default
help: set the type parameter on the enum
   |
LL |    let Foo::<'static>::Bar { field: _z } = foo;
   |           ^^^^^^^^^^^    --

warning: type parameter on variant
  --> $DIR/pattern_substs_on_brace_enum_variant.rs:17:18
   |
LL |        Foo::Bar::<'static> { field: _z } => {}
   |                  ^^^^^^^^^
   |
help: set the type parameter on the enum
   |
LL |        Foo::<'static>::Bar { field: _z } => {}
   |           ^^^^^^^^^^^    --

error[E0597]: `y` does not live long enough
  --> $DIR/pattern_substs_on_brace_enum_variant.rs:7:32
   |
LL |    let foo = Foo::Bar { field: &y };
   |                                ^^ borrowed value does not live long enough
LL |
LL |    let Foo::Bar::<'static> { field: _z } = foo;
   |        --------------------------------- type annotation requires that `y` is borrowed for `'static`
LL | }
   | - `y` dropped here while still borrowed

error[E0597]: `y` does not live long enough
  --> $DIR/pattern_substs_on_brace_enum_variant.rs:14:32
   |
LL |    let foo = Foo::Bar { field: &y };
   |                                ^^ borrowed value does not live long enough
...
LL |        Foo::Bar::<'static> { field: _z } => {}
   |        --------------------------------- type annotation requires that `y` is borrowed for `'static`
LL |    }
LL | }
   | - `y` dropped here while still borrowed

error[E0597]: `y` does not live long enough
  --> $DIR/pattern_substs_on_brace_enum_variant.rs:23:32
   |
LL |    let foo = Foo::Bar { field: &y };
   |                                ^^ borrowed value does not live long enough
LL |
LL |    let Foo::<'static>::Bar { field: _z } = foo;
   |        --------------------------------- type annotation requires that `y` is borrowed for `'static`
LL | }
   | - `y` dropped here while still borrowed

error[E0597]: `y` does not live long enough
  --> $DIR/pattern_substs_on_brace_enum_variant.rs:30:32
   |
LL |    let foo = Foo::Bar { field: &y };
   |                                ^^ borrowed value does not live long enough
...
LL |        Foo::<'static>::Bar { field: _z } => {}
   |        --------------------------------- type annotation requires that `y` is borrowed for `'static`
LL |    }
LL | }
   | - `y` dropped here while still borrowed

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0597`.
